# LR_Parser

./: CMakeLists.txt  README.md
Config/: lrparser.txt
includes/: BNF.h  BNF_parser.h  LR_parser.h  Parser.h  ScriptRunner.h  State.h  VMap.h  afx.h
sources/: BNF.cpp  BNF_parser.cpp  LRCore.cpp  LR_parser.cpp  ScriptRunner.cpp  main.cpp
test/: lex.txt  lrparser.txt  lrparser2.txt  lrparser_test1.txt
test/c-0/: init_pcode.lua  lr_parser  lrparser.txt  test.pco
test/c-1/: lr_parser  lrparser.txt  test.pco  test.txt
test/epsilon测试/: lrparser.txt  test.txt
test/maintest/: lex.txt  lr_parser  lrparser.txt  test.txt
test/计算器/: lr_parser  lrparser.txt  test.txt
